--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,20 @@ header {
     text-align: center;
 }
 
+@font-face {
+    font-family: 'CustomFont';
+    src: url('fonts/font.ttf') format('truetype');
+}
+/* classes */
+.center {
+    margin: auto;
+    text-align: center;
+    width: 50%;
+  }
+
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'CustomFont', sans-serif;
     background-color: #f4f4f4;
     color: #333;
     margin: 0;
